# PrivChain-MDD-

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
chaincode/privchain-cc/: README.md
configs/: baseline.yaml  daic_woz.yaml  federated.yaml  privacy.yaml
data/: README.md
docs/: implementation-plan.md
docs/architecture/: ADR-0001-mock-daic-woz-dataset.md  ADR-0002-daic-woz-integration.md  ADR-0003-federated-flower-baseline.md  ADR-0004-per-modality-dp.md
scripts/: check_no_raw_data.py  generate_mock_data.py  run_dp_sweep.py  run_federated.py  train_baseline.py
src/privchain/: __init__.py  config.py  seeding.py
src/privchain/chain_client/: __init__.py
src/privchain/data/: __init__.py  daic_woz.py  mock_daic_woz.py  text_vectorizers.py
src/privchain/encoders/: __init__.py  audio.py  sequence_encoder.py  text.py  video.py
src/privchain/eval/: __init__.py  metrics.py
src/privchain/federated/: __init__.py  aggregation.py  client.py  flower_app.py  partition.py  simulation.py
src/privchain/fusion/: __init__.py  baseline_model.py  multimodal_fusion.py
src/privchain/privacy/: __init__.py  accountant.py  budget_allocator.py  dp_sgd.py  opacus_engine.py
src/privchain/training/: __init__.py  experiment.py  loaders.py  objective.py  trainer.py
tests/integration/: test_dp_sgd.py  test_federated_simulation.py  test_pipeline_smoke.py  test_train_baseline.py
tests/unit/: test_accountant.py  test_aggregation.py  test_budget_allocator.py  test_daic_woz_parsing.py  test_encoders.py  test_metrics.py  test_mock_daic_woz.py  test_model.py  test_partition.py
